spieler anzahl wird im modal angezeigt

--- a/css/app.css
+++ b/css/app.css
@@ -67,3 +67,12 @@
 #button-save-changes-small {
     margin-bottom: 0.5em;
 }
+
+#header-date,
+#player-count {
+    float: left;
+}
+
+#player-count {
+    margin-left: 2em;
+}
