--- a/css/app.css
+++ b/css/app.css
@@ -86,7 +86,7 @@
     border-style: solid;
     border-width: 1px;
     border-color: #d8d8d8;
-    margin-bottom: 1.25rem;
     padding: 1.25rem;
     background: #f2f2f2;
+    margin-top: 2em;
 }
